# translation-methods

./: .gitignore  CMakeLists.txt  README.md
expressions-translator/: CMakeLists.txt  README.md
expressions-translator/book/: Context.h  LexicalAnalyzer.h  LexicalAnalyzer.l  Parser.y
expressions-translator/tests/: ExpressionTests.cpp  StatementTests.cpp  common.h
expressions-translator/translator/: main.cpp
parser/: AnalysisExcpetion.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  SyntaxAnalyzer.cpp
recursive-parser/: CMakeLists.txt  README.md
recursive-parser/parser/: SyntaxAnalyzer.h  Token.h
recursive-parser/tests/: LexerTests.cpp  SyntaxTests.cpp
recursive-parser/visualizer/: main.cpp
tests/: LexerTests.cpp
translator-generator/: CMakeLists.txt  README.md
translator-generator/examples/calculator/: CMakeLists.txt
translator-generator/examples/calculator/src/: calculator.lex  calculator.par  main.cpp
translator-generator/examples/calculator/tests/: BasicTests.cpp
translator-generator/examples/lexer-example/: example.lex
translator-generator/examples/logical-expressions/: CMakeLists.txt
translator-generator/examples/logical-expressions/src/: logical-expressions.lex  logical-expressions.par  main.cpp
translator-generator/lexer-generator/: CMakeLists.txt
translator-generator/lexer-generator/include/: LexerGenerator.h
translator-generator/lexer-generator/src/: InputLexicalAnalyzer.h  InputLexicalAnalyzer.l  InputParseContext.h  InputParser.y  LexerGenerator.cpp  main.cpp
translator-generator/location-api/: CMakeLists.txt
translator-generator/location-api/include/: Location.h
translator-generator/parser-generator/: CMakeLists.txt
translator-generator/parser-generator/include/: ParserGenerator.h
translator-generator/parser-generator/src/: GrammarAnalyzer.cpp  GrammarAnalyzer.h  InputLexicalAnalyzer.h  InputLexicalAnalyzer.l  InputParseContext.h  InputParser.y  ParserGenerator.cpp  main.cpp
translator-generator/parser-generator/tests/: GrammarChecksTests.cpp  GrammarFirstFollowTests.cpp
translator-generator/user/: CMakeLists.txt
translator-generator/user/include/: LexerBase.h  Location.h  ParserBase.h
visualizer/: main.cpp
